@@ -158,6 +158,42 @@ function formatArgument() {
   echo "${ARGUMENT}"
 }
 
+function check_user_library() {
+
+  echo "$RCLI_ASK_USER_LIB"
+  # if [[ $RCLI_QUIET != "true" && -z RCLI_ASK_USER_LIB ]]; then
+  if [[ $RCLI_QUIET != "true" || $RCLI_ASK_USER_LIB != "false" ]]; then
+    # this means the request R version was smaller than 4.1.0 and the user lib does not need an arch subdir
+    if [[ $R4x == -1 ]]; then
+
+      if [[ $(test -d $HOME/Library/R/$R_CUT/library && echo "true" || echo "false") == "false" ]]; then
+        echo -e "⚠ No user library was detected for R version $R_VERSION. Do you want \033[36mrcli\033[0m to create it for you at \033[36m$HOME/Library/R/$R_CUT/library\033[0m? [Y/y]"
+        read -r
+        if [[ $REPLY =~ ^[Yy]$ ]]; then
+          mkdir -p $HOME/Library/R/$R_CUT/library
+        fi
+      fi
+    elif [[ $arm_avail == 1 && $ARG_ARCH == "x86_64" ]]; then
+      if [[ $(test -d $HOME/Library/R/x86_64/$R_CUT/library && echo "true" || echo "false") == "false" ]]; then
+        echo -e "⚠ No user library was detected for R version $R_VERSION (x86_64). Do you want \033[36mrcli\033[0m to create it for you at \033[36m$HOME/Library/R/x86_64/$R_CUT/library\033[0m? [Y/y]"
+        read -r
+        if [[ $REPLY =~ ^[Yy]$ ]]; then
+          mkdir -p $HOME/Library/R/x86_64/$R_CUT/library
+        fi
+      fi
+    else
+      if [[ $(test -d $HOME/Library/R/arm64/$R_CUT/library && echo "true" || echo "false") == "false" ]]; then
+        echo -e "⚠ No user library was detected for R version $R_VERSION (x86_64). Do you want \033[36mrcli\033[0m to create it for you at \033[36m$HOME/Library/R/arm64/$R_CUT/library\033[0m? [Y/y]"
+        read -r
+        if [[ $REPLY =~ ^[Yy]$ ]]; then
+          mkdir -p $HOME/Library/R/arm64/$R_CUT/library
+        fi
+      fi
+    fi
+  fi
+
+}
+
 function switch() {
 
   if [[ $R_VERSION =~ dev ]]; then
@@ -238,6 +274,8 @@ function switch() {
       # need 777 permissions
       sudo chmod 777 /Library/Frameworks/R.framework/Versions/$TARGET_R_CUT_ARCH/Resources/library
 
+      check_user_library
+
       # only restore if R_VERSION has a syslib-bak
       if [[ $(test -d /opt/R/$TARGET_R_VERSION_ARCH/syslib-bak && echo "true" || echo "false") == "true" ]]; then
         if [[ $ARG_DEBUG == 1 ]]; then
@@ -311,12 +349,6 @@ function switch() {
       exit 0
     fi
 
-    if [[ $currentArch == "arm64" ]]; then
-      CURRENT_R_VERSION_ARCH=$currentR-arm64
-    else
-      CURRENT_R_VERSION_ARCH=$currentR
-    fi
-
     # only backup if the syslib contains user packages
     SYSLIB=$(R -q -s -e "tail(.libPaths(), 1)" | cut -c 6- | sed 's/.$//')
 
@@ -339,18 +371,20 @@ function switch() {
 
       TARGET_R_VERSION_ARCH=$R_VERSION
       TARGET_R_CUT_ARCH=$R_CUT
-      if [[ $(arch) == "arm64" ]]; then
-        TARGET_R_VERSION_ARCH=$R_VERSION-arm64
-        TARGET_R_CUT_ARCH=$R_CUT-arm64
-      fi
+      # if [[ $(arch) == "arm64" ]]; then
+      #   TARGET_R_VERSION_ARCH=$R_VERSION-arm64
+      #   TARGET_R_CUT_ARCH=$R_CUT-arm64
+      # fi
       # override with user preference
-      if [[ $ARG_ARCH == "x86_64" ]]; then
-        TARGET_R_VERSION_ARCH=$R_VERSION
-        TARGET_R_CUT_ARCH=$R_CUT
-      fi
+      # if [[ $ARG_ARCH == "x86_64" ]]; then
+      TARGET_R_VERSION_ARCH=$R_VERSION
+      TARGET_R_CUT_ARCH=$R_CUT
+      # fi
 
       # need 777 permissions
       sudo chmod 777 /Library/Frameworks/R.framework/Versions/$TARGET_R_CUT_ARCH/Resources/library
+
+      check_user_library
 
       ### restore syslib from target version if it exists
       # only restore if R_VERSION has a syslib-bak
@@ -374,18 +408,11 @@ function switch() {
 
       TARGET_R_VERSION_ARCH=$R_VERSION
       TARGET_R_CUT_ARCH=$R_CUT
-      if [[ $(arch) == "arm64" ]]; then
-        TARGET_R_VERSION_ARCH=$R_VERSION-arm64
-        TARGET_R_CUT_ARCH=$R_CUT-arm64
-      fi
-      # override with user preference
-      if [[ $ARG_ARCH == "x86_64" ]]; then
-        TARGET_R_VERSION_ARCH=$R_VERSION
-        TARGET_R_CUT_ARCH=$R_CUT
-      fi
 
       # need 777 permissions
       sudo chmod 777 /Library/Frameworks/R.framework/Versions/$TARGET_R_CUT_ARCH/Resources/library
+
+      check_user_library
 
       # only restore if R_VERSION has a syslib-bak
       if [[ $(test -d /opt/R/$R_VERSION/syslib-bak && echo "true" || echo "false") == "true" ]]; then
@@ -420,7 +447,9 @@ function install() {
 
         codename=$(lsb_release -sr)
 
-        echo -e "→ Downloading \033[36mhttps://cdn.rstudio.com/r/ubuntu-${codename//./}/pkgs/r-${R_VERSION}_1_amd64.deb\033[0m"
+        if [[ $RCLI_QUIET != "true" ]]; then
+          echo -e "→ Downloading \033[36mhttps://cdn.rstudio.com/r/ubuntu-${codename//./}/pkgs/r-${R_VERSION}_1_amd64.deb\033[0m"
+        fi
         wget -q "https://cdn.rstudio.com/r/ubuntu-${codename//./}/pkgs/r-${R_VERSION}_1_amd64.deb"
         sudo dpkg -i r-${R_VERSION}_1_amd64.deb >/dev/null
         sudo apt-get -y -f install
@@ -448,7 +477,9 @@ function install() {
 
       codename=$(lsb_release -sr)
 
-      echo -e "→ Downloading \033[36mhttps://cdn.rstudio.com/r/debian-${codename//./}/pkgs/r-${R_VERSION}_1_amd64.deb\033[0m"
+      if [[ $RCLI_QUIET != "true" ]]; then
+        echo -e "→ Downloading \033[36mhttps://cdn.rstudio.com/r/debian-${codename//./}/pkgs/r-${R_VERSION}_1_amd64.deb\033[0m"
+      fi
       wget -q "https://cdn.rstudio.com/r/ubuntu-${codename//./}/pkgs/r-${R_VERSION}_1_amd64.deb"
       sudo dpkg -i r-${R_VERSION}_1_amd64.deb >/dev/null
       rm r-${R_VERSION}_1_amd64.deb
@@ -467,7 +498,9 @@ function install() {
 
       codename=$(lsb_release -sr | cut -c 1)
 
-      echo -e "→ Downloading \033[36mhttps://cdn.rstudio.com/r/centos-${codename//./}/pkgs/R-${R_VERSION}-1-1.x86_64.rpm\033[0m"
+      if [[ $RCLI_QUIET != "true" ]]; then
+        echo -e "→ Downloading \033[36mhttps://cdn.rstudio.com/r/centos-${codename//./}/pkgs/R-${R_VERSION}-1-1.x86_64.rpm\033[0m"
+      fi
       wget -q "https://cdn.rstudio.com/r/centos-${codename//./}/pkgs/R-${R_VERSION}-1-1.x86_64.rpm"
       sudo yum -y install R-${R_VERSION}-1-1.x86_64.rpm >/dev/null
       rm R-${R_VERSION}-1-1.x86_64.rpm
@@ -485,11 +518,15 @@ function install() {
   fi
 
   if [[ $ARG_ARCH == "x86_64" ]]; then
-    echo -e "→ Downloading x86_64 installer because \033[36m--arch x86_64\033[0m was set."
+    if [[ $RCLI_QUIET != "true" ]]; then
+      echo -e "→ Downloading x86_64 installer because \033[36m--arch x86_64\033[0m was set."
+    fi
   fi
 
   if [[ $arm_avail != 1 && $ARG_ARCH != "x86_64" ]]; then
-    echo -e "→ No arm installer available for this R version. Downloading \033[36mx86_64\033[0m version instead."
+    if [[ $RCLI_QUIET != "true" ]]; then
+      echo -e "→ No arm installer available for this R version. Downloading \033[36mx86_64\033[0m version instead."
+    fi
   fi
 
   # this means the request R version was smaller than 3.6.3
@@ -501,7 +538,9 @@ function install() {
       exit 0
     fi
 
-    echo -e "→ Downloading \033[36mhttps://cran.r-project.org/bin/macosx/el-capitan/base/R-${R_VERSION}.pkg\033[0m"
+    if [[ $RCLI_QUIET != "true" ]]; then
+      echo -e "→ Downloading \033[36mhttps://cran.r-project.org/bin/macosx/el-capitan/base/R-${R_VERSION}.pkg\033[0m"
+    fi
     curl -s https://cran.r-project.org/bin/macosx/el-capitan/base/R-${R_VERSION}.pkg -o /tmp/R-${R_VERSION}.pkg
 
     R_CUT=$(echo $R_VERSION | cut -c 1-3)
@@ -512,6 +551,8 @@ function install() {
     sudo cp -fR /Library/Frameworks/R.framework/Versions/Current /opt/R/$R_VERSION/ 2>/dev/null
 
     rm /tmp/R-${R_VERSION}.pkg
+
+    check_user_library
 
   elif [[ ($arch == "arm64" && $arm_avail == 1 && $ARG_ARCH != "x86_64") ]]; then
 
@@ -536,6 +577,7 @@ function install() {
 
     currentR=$(echo $(R --version) | cut -c 11-15)
     # detect if current R is r-devel
+    # 'velop' is correct here
     if [[ $currentR == "velop" ]]; then
       currentR=$(echo $(R -s -q -e 'paste(R.version[["major"]], R.version[["minor"]], sep = ".")') | cut -c 6-10)
     fi
@@ -558,13 +600,17 @@ function install() {
 
     if [[ $R_VERSION =~ dev ]]; then
       R_VERSION="devel"
-      echo -e "→ Downloading \033[36mhttps://mac.r-project.org/big-sur/R-devel/R-devel.pkg\033[0m"
+      if [[ $RCLI_QUIET != "true" ]]; then
+        echo -e "→ Downloading \033[36mhttps://mac.r-project.org/big-sur/R-devel/R-devel.pkg\033[0m"
+      fi
 
       R_VERSION=$(echo $(R -s -q -e 'paste(R.version[["major"]], R.version[["minor"]], sep = ".")') | cut -c 6-10)
       R_CUT=$(echo $R_VERSION | cut -c 1-3)
       curl -s https://mac.r-project.org/big-sur/R-devel/R-devel.pkg -o /tmp/R-${R_VERSION}-arm64.pkg
     else
-      echo -e "→ Downloading \033[36mhttps://cran.r-project.org/bin/macosx/big-sur-arm64/base/R-${R_VERSION}-arm64.pkg\033[0m"
+      if [[ $RCLI_QUIET != "true" ]]; then
+        echo -e "→ Downloading \033[36mhttps://cran.r-project.org/bin/macosx/big-sur-arm64/base/R-${R_VERSION}-arm64.pkg\033[0m"
+      fi
       curl -s https://cran.r-project.org/bin/macosx/big-sur-arm64/base/R-${R_VERSION}-arm64.pkg -o /tmp/R-${R_VERSION}-arm64.pkg
     fi
 
@@ -606,13 +652,17 @@ function install() {
 
     if [[ $R_VERSION =~ dev ]]; then
       R_VERSION="devel"
-      echo -e "→ Downloading \033[36mhttps://mac.r-project.org/high-sierra/R-devel/R-devel.pkg\033[0m"
+      if [[ $RCLI_QUIET != "true" ]]; then
+        echo -e "→ Downloading \033[36mhttps://mac.r-project.org/high-sierra/R-devel/R-devel.pkg\033[0m"
+      fi
 
       R_VERSION=$(echo $(R -s -q -e 'paste(R.version[["major"]], R.version[["minor"]], sep = ".")') | cut -c 6-10)
       R_CUT=$(echo $R_VERSION | cut -c 1-3)
       curl -s https://mac.r-project.org/high-sierra/R-devel/R-devel.pkg -o /tmp/R-${R_VERSION}.pkg
     else
-      echo -e "→ Downloading \033[36mhttps://cran.r-project.org/bin/macosx/base/R-${R_VERSION}.pkg\033[0m"
+      if [[ $RCLI_QUIET != "true" ]]; then
+        echo -e "→ Downloading \033[36mhttps://cran.r-project.org/bin/macosx/base/R-${R_VERSION}.pkg\033[0m"
+      fi
       curl -s https://cran.r-project.org/bin/macosx/base/R-${R_VERSION}.pkg -o /tmp/R-${R_VERSION}.pkg
     fi
 
@@ -639,6 +689,8 @@ function install() {
     sudo rm -rf /Library/Frameworks/R.framework/Versions
     sudo installer -pkg /tmp/R-${R_VERSION}.pkg -target / >/dev/null
     rm /tmp/R-${R_VERSION}.pkg
+
+    check_user_library
 
     sudo mkdir -p /opt/R/$R_VERSION/
     sudo cp -fR /Library/Frameworks/R.framework/Versions/$R_CUT /opt/R/$R_VERSION/ 2>/dev/null
@@ -784,7 +836,9 @@ function install_from_source() {
 
   if [[ $R_VERSION =~ dev ]]; then
     R_VERSION="devel"
-    echo -e "→ Downloading \033[36mhttps://cran.r-project.org/src/base-prerelease/R-devel.tar.gz\033[0m"
+    if [[ $RCLI_QUIET != "true" ]]; then
+      echo -e "→ Downloading \033[36mhttps://cran.r-project.org/src/base-prerelease/R-devel.tar.gz\033[0m"
+    fi
 
     R_VERSION=$(curl -s https://mac.r-project.org/ | grep "Under development" -m 1 | grep "[0-9]\.[0-9]\.[0-9]" -o)
     curl -s -o R-$R_VERSION.tar.gz https://cran.r-project.org/src/base-prerelease/R-devel.tar.gz
@@ -792,7 +846,9 @@ function install_from_source() {
     cd R-devel
   else
     R_BRANCH=$(echo $R_VERSION | cut -c 1)
-    echo -e "→ Downloading \033[36mhttps://cran.r-project.org/src/base/R-$R_BRANCH/R-$R_VERSION.tar.gz\033[0m"
+    if [[ $RCLI_QUIET != "true" ]]; then
+      echo -e "→ Downloading \033[36mhttps://cran.r-project.org/src/base/R-$R_BRANCH/R-$R_VERSION.tar.gz\033[0m"
+    fi
     wget -q "https://cran.r-project.org/src/base/R-$R_BRANCH/R-$R_VERSION.tar.gz"
     tar -xf R-${R_VERSION}.tar.gz
     cd R-${R_VERSION}
@@ -863,12 +919,14 @@ function rcli() {
   if [[ $1 == "install" ]]; then
     arm_avail=$(version_compare $R_VERSION 4.0.6)
     R3x="$(version_compare $R_VERSION 3.6.4)"
+    R4x="$(version_compare $R_VERSION 4.1.0)"
     install
     exit 0
 
   elif [[ $1 == "switch" ]]; then
     arm_avail=$(version_compare $R_VERSION 4.0.6)
     R3x="$(version_compare $R_VERSION 3.6.4)"
+    R4x="$(version_compare $R_VERSION 4.1.0)"
     switch
     exit 0
 
