@@ -6,6 +6,10 @@ DEV: rcli (0.6.0-1) unstable; urgency=medium
   * `rcli ls` is now an alias to `rcli list`
   * `rcli list` shows again the installed R versions
   * `rcli ls` can now also show all existing R user libraries via `rcli ls user_libs`
+  * `rcli` now assumes the correct architecture when switching from arm64 to x86_64 versions
+  * Two new env var config options:
+    * `RCLI_ASK_USER_LIB` allows to suppress `rcli` asking if a user library should be created if none exists on macOS
+    * `RCLI_QUIET` suppresses the verbose "Download R version XY" and other messages during execution
 
 rcli (0.5.1-1) unstable; urgency=medium
 
